[package]
name = "aoc2020"
version = "0.1.0"
authors = ["lanice"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"

serde = { version = "1.0", features = ["derive"] }
toml = "0.5.7"
